try to fix compilation test