@@ -18,17 +18,20 @@
  */
 package org.apache.pinot.broker.routing.instanceselector;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import java.time.Instant;
 import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.TimeUnit;
+import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.helix.model.ExternalView;
 import org.apache.helix.model.IdealState;
@@ -141,7 +144,7 @@ public class ReplicaGroupInstanceSelectorTest {
     String oldSeg = "segment0";
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
+        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -153,17 +156,22 @@ public class ReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap() {{
+      put(oldSeg, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
+
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance1:online]
-    Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of(Pair.of(instance1, ONLINE))));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of(ImmutablePair.of(instance1, ONLINE)));
+    }};
+
     ExternalView externalView = createExternalView(externalViewMap);
 
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
@@ -173,7 +181,9 @@ public class ReplicaGroupInstanceSelectorTest {
     // First selection, we select instance0 for newSeg, and we exclude it and not report error.
     // We don't mark instance0 as unavailable for segment0 either.
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult = Map.ofEntries(Map.entry(oldSeg, instance0));
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance0);
+    }};
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -181,8 +191,10 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // Second selection, we select instance0 for newSeg, we serve the newSeg and not report error;
     requestId = 1;
-    expectedReplicaGroupInstanceSelectorResult =
-        Map.ofEntries(Map.entry(oldSeg, instance1), Map.entry(newSeg, instance1));
+    expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance1);
+      put(newSeg, instance1);
+    }};
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -193,8 +205,10 @@ public class ReplicaGroupInstanceSelectorTest {
     // Upon re-initialization, newly old segments can only serve from online instance
     replicaGroupInstanceSelector.init(enabledInstances, idealState, externalView, onlineSegments);
     requestId = 0;
-    expectedReplicaGroupInstanceSelectorResult =
-        Map.ofEntries(Map.entry(oldSeg, instance0), Map.entry(newSeg, instance1));
+    expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance0);
+      put(newSeg, instance1);
+    }};
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -202,8 +216,10 @@ public class ReplicaGroupInstanceSelectorTest {
     requestId = 1;
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
-    expectedReplicaGroupInstanceSelectorResult =
-        Map.ofEntries(Map.entry(oldSeg, instance1), Map.entry(newSeg, instance1));
+    expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance1);
+      put(newSeg, instance1);
+    }};
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
     assertTrue(selectionResult.getUnavailableSegments().isEmpty());
   }
@@ -216,7 +232,7 @@ public class ReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
+        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -228,17 +244,22 @@ public class ReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap() {{
+      put(oldSeg, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
+
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
-    Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of()));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of());
+    }};
+
     ExternalView externalView = createExternalView(externalViewMap);
 
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
@@ -247,7 +268,9 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult = Map.ofEntries(Map.entry(oldSeg, instance0));
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap() {{
+      put(oldSeg, instance0);
+    }};
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -259,7 +282,7 @@ public class ReplicaGroupInstanceSelectorTest {
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), List.of(newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
   }
 
   // Test that we mark new segment as old when we see error state.
@@ -270,7 +293,7 @@ public class ReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
+        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -282,17 +305,22 @@ public class ReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap() {{
+      put(oldSeg, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
+
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
-    Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of()));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of());
+    }};
+
     ExternalView externalView = createExternalView(externalViewMap);
 
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
@@ -301,31 +329,37 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult = Map.ofEntries(Map.entry(oldSeg, instance0));
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance0);
+    }};
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
     assertTrue(selectionResult.getUnavailableSegments().isEmpty());
 
     // Report error instance for segment1 since segment1 becomes old and we should report the error.
-    externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of(Pair.of(instance0, ERROR))));
+    externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ERROR)));
+    }};
     externalView = createExternalView(externalViewMap);
     replicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), List.of(newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
 
     // Get segment1 back online in instance1
-    externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of(Pair.of(instance0, ERROR), Pair.of(instance1, ONLINE))));
+    externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ERROR), ImmutablePair.of(instance1, ONLINE)));
+    }};
     externalView = createExternalView(externalViewMap);
     replicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
-    expectedReplicaGroupInstanceSelectorResult =
-        Map.ofEntries(Map.entry(oldSeg, instance0), Map.entry(newSeg, instance1));
+    expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance0);
+      put(newSeg, instance1);
+    }};
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -340,7 +374,7 @@ public class ReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
+        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -352,17 +386,20 @@ public class ReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> []
-    Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of()));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of());
+    }};
     ExternalView externalView = createExternalView(externalViewMap);
 
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
@@ -371,23 +408,28 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // We don't mark segment as unavailable.
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult = Map.ofEntries(Map.entry(oldSeg, instance0));
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance0);
+    }};
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
     assertTrue(selectionResult.getUnavailableSegments().isEmpty());
 
     // Segment1 is not old anymore with state converge.
-    externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))));
+    externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+    }};
+
     externalView = createExternalView(externalViewMap);
     replicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
 
     // Segment1 becomes unavailable.
-    externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of()));
+    externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of());
+    }};
     externalView = createExternalView(externalViewMap);
     replicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
 
@@ -395,7 +437,7 @@ public class ReplicaGroupInstanceSelectorTest {
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), List.of(newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
   }
 
   // Test that we get new segment from ideal state update.
@@ -413,17 +455,20 @@ public class ReplicaGroupInstanceSelectorTest {
     String instance1 = "instance1";
     Set<String> enabledInstances = ImmutableSet.of(instance0, instance1);
 
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg0, List.of(instance0, instance1)),
-        Map.entry(oldSeg1, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap<>() {{
+      put(oldSeg0, ImmutableList.of(instance0, instance1));
+      put(oldSeg1, ImmutableList.of(instance0, instance1));
+    }};
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg0, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(oldSeg1, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap<>() {{
+      put(oldSeg0, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(oldSeg1, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+    }};
     ExternalView externalView = createExternalView(externalViewMap);
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
         new ReplicaGroupInstanceSelector(TABLE_NAME, _brokerMetrics, null, _propertyStore, _mutableClock);
@@ -432,19 +477,24 @@ public class ReplicaGroupInstanceSelectorTest {
     // Add a new segment to ideal state with missing external view.
     String newSeg = "segment2";
     onlineSegments = ImmutableSet.of(oldSeg0, oldSeg1, newSeg);
-    idealSateMap = Map.ofEntries(Map.entry(oldSeg0, List.of(instance0, instance1)),
-        Map.entry(oldSeg1, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    idealSateMap = new HashMap<>() {{
+      put(oldSeg0, ImmutableList.of(instance0, instance1));
+      put(oldSeg1, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
     idealState = createIdealState(idealSateMap);
-    externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg0, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(oldSeg1, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))));
+    externalViewMap = new HashMap<>() {{
+      put(oldSeg0, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(oldSeg1, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+    }};
     externalView = createExternalView(externalViewMap);
     replicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
 
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult =
-        Map.ofEntries(Map.entry(oldSeg0, instance0), Map.entry(oldSeg1, instance0));
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg0, instance0);
+      put(oldSeg1, instance0);
+    }};
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -456,7 +506,7 @@ public class ReplicaGroupInstanceSelectorTest {
     replicaGroupInstanceSelector.onAssignmentChange(idealState, externalView, onlineSegments);
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
-    assertEquals(selectionResult.getUnavailableSegments(), List.of(newSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(newSeg));
   }
 
   // Test that on instance change, we exclude not enabled instance from serving for new segments.
@@ -467,7 +517,7 @@ public class ReplicaGroupInstanceSelectorTest {
     // Set segment1 as new segment
     String newSeg = "segment1";
     List<Pair<String, Long>> segmentCreationTime =
-        List.of(Pair.of(newSeg, _mutableClock.millis() - 100));
+        ImmutableList.of(ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -479,17 +529,21 @@ public class ReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
+
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online]
-    Map<String, List<Pair<String, String>>> externalViewMap = Map.ofEntries(
-        Map.entry(oldSeg, List.of(Pair.of(instance0, ONLINE), Pair.of(instance1, ONLINE))),
-        Map.entry(newSeg, List.of(Pair.of(instance0, ONLINE))));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE), ImmutablePair.of(instance1, ONLINE)));
+      put(newSeg, ImmutableList.of(ImmutablePair.of(instance0, ONLINE)));
+    }};
     ExternalView externalView = createExternalView(externalViewMap);
 
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
@@ -498,8 +552,10 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // First selection, we select instance0 for newSeg.
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult =
-        Map.ofEntries(Map.entry(oldSeg, instance0), Map.entry(newSeg, instance0));
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance0);
+      put(newSeg, instance0);
+    }};
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
@@ -507,12 +563,14 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // Remove instance0 from enabledInstances.
     enabledInstances = ImmutableSet.of(instance1);
-    List<String> changeInstance = List.of(instance0);
+    List<String> changeInstance = ImmutableList.of(instance0);
     replicaGroupInstanceSelector.onInstancesChange(enabledInstances, changeInstance);
     selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     // We don't include instance0 in selection anymore.
-    expectedReplicaGroupInstanceSelectorResult = Map.ofEntries(Map.entry(oldSeg, instance1));
+    expectedReplicaGroupInstanceSelectorResult = new HashMap<>() {{
+      put(oldSeg, instance1);
+    }};
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
     assertTrue(selectionResult.getUnavailableSegments().isEmpty());
   }
@@ -523,9 +581,9 @@ public class ReplicaGroupInstanceSelectorTest {
     String oldSeg = "segment0";
     // Set segment1 as new segment
     String newSeg = "segment1";
-    List<Pair<String, Long>> segmentCreationTime = List.of(Pair.of(oldSeg,
+    List<Pair<String, Long>> segmentCreationTime = ImmutableList.of(ImmutablePair.of(oldSeg,
             _mutableClock.millis() - CommonConstants.Helix.StateModel.NEW_SEGMENT_EXPIRATION_MILLIS - 100),
-        Pair.of(newSeg, _mutableClock.millis() - 100));
+        ImmutablePair.of(newSeg, _mutableClock.millis() - 100));
     createSegments(segmentCreationTime);
     Set<String> onlineSegments = ImmutableSet.of(oldSeg, newSeg);
 
@@ -538,17 +596,20 @@ public class ReplicaGroupInstanceSelectorTest {
     // Ideal states for two segments
     //   [segment0] -> [instance0:online, instance1:online]
     //   [segment1] -> [instance0:online, instance1:online]
-    Map<String, List<String>> idealSateMap = Map.ofEntries(Map.entry(oldSeg, List.of(instance0, instance1)),
-        Map.entry(newSeg, List.of(instance0, instance1)));
+    Map<String, List<String>> idealSateMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(instance0, instance1));
+      put(newSeg, ImmutableList.of(instance0, instance1));
+    }};
     IdealState idealState = createIdealState(idealSateMap);
 
     // Set up external view:
     // External view for two segments
     //   [segment0] -> [instance2: online]
     //   [segment1] -> [instance2: online]
-    Map<String, List<Pair<String, String>>> externalViewMap =
-        Map.ofEntries(Map.entry(oldSeg, List.of(Pair.of(instance2, ONLINE))),
-            Map.entry(newSeg, List.of(Pair.of(instance2, ONLINE))));
+    Map<String, List<Pair<String, String>>> externalViewMap = new HashMap<>() {{
+      put(oldSeg, ImmutableList.of(ImmutablePair.of(instance2, ONLINE)));
+      put(newSeg, ImmutableList.of(ImmutablePair.of(instance2, ONLINE)));
+    }};
     ExternalView externalView = createExternalView(externalViewMap);
 
     ReplicaGroupInstanceSelector replicaGroupInstanceSelector =
@@ -557,10 +618,10 @@ public class ReplicaGroupInstanceSelectorTest {
 
     // No selection because the external view is not in ideal state.
     int requestId = 0;
-    Map<String, String> expectedReplicaGroupInstanceSelectorResult = Map.ofEntries();
+    Map<String, String> expectedReplicaGroupInstanceSelectorResult = new HashMap<>();
     InstanceSelector.SelectionResult selectionResult =
         replicaGroupInstanceSelector.select(_brokerRequest, Lists.newArrayList(onlineSegments), requestId);
     assertEquals(selectionResult.getSegmentToInstanceMap(), expectedReplicaGroupInstanceSelectorResult);
-    assertEquals(selectionResult.getUnavailableSegments(), List.of(oldSeg));
+    assertEquals(selectionResult.getUnavailableSegments(), ImmutableList.of(oldSeg));
   }
 }
